# argo-workflow-tools

./: .flake8  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: poetry-publish.yml  publish-main-packge.yml  publish-visualization-package.yml  test.yml
argo_client/: __init__.py  argo_client.py  argo_options.py  workflow_result.py  workflow_status.py  workflow_status_checker.py
argo_client/exceptions/: workflow_not_found_exception.py
argo_submitter/: __init__.py  argo_options.py  artifact.py  submit_argo_workflow.py  terminal_loading_animation.py  workflow_result.py  workflow_status.py  workflow_status_checker.py
argo_submitter/exceptions/: workflow_not_found_exception.py
argo_workflow_tools/: __init__.py  argo_client.py  argo_http_client.py  artifact.py  merge_result.py  terminal_loading_animation.py  workflow_result.py  workflow_status.py  workflow_status_checker.py  workflow_type.py
argo_workflow_tools/dsl/: __init__.py  building_mode_context.py  condition.py  dag_compiler.py  dag_task.py  dsl_decorators.py  expression.py  input_definition.py  node.py  node_output.py  workflow.py  workflow_compiler.py  workflow_template_collector.py
argo_workflow_tools/dsl/node_properties/: __init__.py  dag_node_properties.py  task_node_properties.py
argo_workflow_tools/models/: __init__.py  eventsource.py  sensor.py
argo_workflow_tools/sdk/: __init__.py
argo_workflow_tools_visualization/: Makefile  pyproject.toml
argo_workflow_tools_visualization/argo_workflow_tools_visualization/: __init__.py
argo_workflow_tools_visualization/argo_workflow_tools_visualization/dsl/dependencies_graph/: build_workflow_dependencies_graph.py  plot_workflow_dependencies_graph.py
examples/: exmaple.py
tests/: test_argo_submitter.py
tests/client/: test_argo_submitter.py
tests/dsl/: test_condition_dag.py  test_continue_on.py  test_cron_workflow.py  test_dag_errors.py  test_duplicated_task_names.py  test_expression.py  test_loop_dag.py  test_loop_key_dag.py  test_multiple_outputs.py  test_nested_dag.py  test_on_dag_exit_dag.py  test_on_exit_dag.py  test_prnt_dag.py  test_simple_dag.py  test_simple_dag_default.py  test_simple_dag_dig.py  test_simple_dag_list.py  test_task_default_output.py  test_task_hooks.py  test_task_with_pydantic_parameters.py  test_wait_for.py  test_workflow_compiler.py  test_workflow_reference.py  test_workflow_template.py  test_workflow_using_workflow.py
(+31 files in other folders)
