[tool.poetry]
name = "argo-workflow-tools"
version = "0.6.1"
description = "A suite of tools to ease ML pipeline development with Argo Workflows"
authors = ["Diagnostic Robotics"]
license = "Apache 2.0"
repository = "https://github.com/DiagnosticRobotics/argo-workflow-tools"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.7"
urllib3 = "^1.26.7"
certifi = "^2021.10.8"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
black = "^20.8b1"
isort = "^5.7.0"
deepdiff = "^5.2.3"
flake8 = "^3.9.2"
pydocstyle = "^6.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pydocstyle]
inherit = false
convention = "numpy"